differential_testing/gcc_regression/gcc_reg_cb/results/gcc482/save_st/pr61096-2.c-4.8.2-1.out.txt
pr61096-2.c: In function ‘bar’:
pr61096-2.c:9:3: error: invalid use of non-lvalue array
   char *t = (foo ()).c;  
   ^
